--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,3 +10,22 @@ h1,h2,h3,h4,h5,h6 {
 	margin: 0 auto;
 	float: none;
 }
+
+.buttons-list button {
+	width: 100%;
+	margin-bottom: 5px;
+}
+
+.tooltip-inner {
+	white-space: pre;
+	max-width: none;
+}
+
+.hide {
+	display: none;
+}
+
+#cloud {
+	margin-top: 30px;
+	height: 500px;
+}
